@@ -1,0 +1,17 @@
+//
+//  NSString+Hex.h
+//  Submariner
+//
+//  Created by Rafaël Warnault on 18/10/11.
+//  Copyright 2011 OPALE. All rights reserved.
+//
+
+#import <Foundation/Foundation.h>
+
+@interface NSString (Hex) {
+    
+}
++ (NSString *) stringFromHex:(NSString *)str;
++ (NSString *) stringToHex:(NSString *)str;
+
+@end
