@@ -5,7 +5,7 @@
 #import "SBAlbum.h"
 #import "NSURL+Parameters.h"
 #import "NSString+Time.h"
-
+#import "NSString+Hex.h"
 
 @implementation SBTrack
 
@@ -58,7 +58,7 @@
     // the default URL parameters
     NSMutableDictionary *parameters = [NSMutableDictionary dictionary];
     [parameters setValue:self.server.username forKey:@"u"];
-    [parameters setValue:self.server.password forKey:@"p"];
+    [parameters setValue:[@"enc:" stringByAppendingString:[NSString stringToHex:self.server.password]] forKey:@"p"];
     [parameters setValue:[[NSUserDefaults standardUserDefaults] stringForKey:@"apiVersion"] forKey:@"v"];
     [parameters setValue:[[NSUserDefaults standardUserDefaults] stringForKey:@"clientIdentifier"] forKey:@"c"];
     [parameters setValue:[[NSUserDefaults standardUserDefaults] stringForKey:@"maxBitRate"] forKey:@"maxBitRate"];
@@ -109,7 +109,7 @@
     // the default URL parameters
     NSMutableDictionary *parameters = [NSMutableDictionary dictionary];
     [parameters setValue:self.server.username forKey:@"u"];
-    [parameters setValue:self.server.password forKey:@"p"];
+    [parameters setValue:[@"enc:" stringByAppendingString:[NSString stringToHex:self.server.password]] forKey:@"p"];
     [parameters setValue:[[NSUserDefaults standardUserDefaults] stringForKey:@"apiVersion"] forKey:@"v"];
     [parameters setValue:[[NSUserDefaults standardUserDefaults] stringForKey:@"clientIdentifier"] forKey:@"c"];
     [parameters setValue:self.id forKey:@"id"];
