@@ -4,11 +4,12 @@ Version 1.1 :
 - Add zoom setting for album browser views.
 - Add Max Bit Rate setting (with few limitations).
 - Add Max Cover Size setting.
+- Improve authentification by supporting password encoding.
 - Improve Tracklist which becomes a Mini-Player.
 - Improve global design, navigation and frame persistence.
 - Improve player progress bar stability and design.
 - Fix bug in "Import Audio Files" feature when "Link" option is choosed.
-
+- Fix memory leaks around REST API
 
 Version 1.0 :
 - Initial release.
